--- a/index.html
+++ b/index.html
@@ -50,30 +50,27 @@
             </div>
 
             <div class="flex flex-col gap-3 xl:w-96 p-4 ring-2 ring-orange-300  bg-orange-100 m-4 items-center shadow-lg shadow-orange-600/20 rounded-xl">
-                <h1 class="font-della font-semibold">Artifact 1</h1>
+                <h1 class="font-della font-semibold">Artifact 2</h1>
                 <img class="h-80 rounded-2xl shadow-xl shadow-orange-600/25" src="arty1.jpg" alt="1">
                 <h1 class="font-della font-semibold">Stone bracket from Hoysala temple</h1>
                 <p class="text-center font-comfo text-sm px-1">
-                    The Hoysala dynasty ruled the south-western Deccan between 1006
-                     and 1346 C.E. Inscriptions record the construction, renovation
-                      and maintenance of many temples by the Hoysala kings, their wives
-                       and ministers. Most of these temples were dedicated to Hindu deities
-                        such as Shiva and Vishnu, and famous examples can be seen at 
-                        Halebidu, Belur and Somnathpur in Karnataka.
+                   Although the pieces in the British Museum are unsigned, a number 
+                    of Hoysala sculptures were signed by individual artists.
+                     Such inscriptions reveal that some sculptors worked on multiple temples,
+                      perhaps part of an artisan group that traveled from site to site
+                       applying their trade.
                 </p>
             </div>
 
             <div class="flex flex-col gap-3 xl:w-96 p-4 ring-2 ring-orange-300  bg-orange-100 m-4 items-center shadow-lg shadow-orange-600/20 rounded-xl">
-                <h1 class="font-della font-semibold">Artifact 1</h1>
+                <h1 class="font-della font-semibold">Artifact 3</h1>
                 <img class="h-80 rounded-2xl shadow-xl shadow-orange-600/25" src="arty1.jpg" alt="1">
                 <h1 class="font-della font-semibold">Stone bracket from Hoysala temple</h1>
                 <p class="text-center font-comfo text-sm px-1">
-                    The Hoysala dynasty ruled the south-western Deccan between 1006
-                     and 1346 C.E. Inscriptions record the construction, renovation
-                      and maintenance of many temples by the Hoysala kings, their wives
-                       and ministers. Most of these temples were dedicated to Hindu deities
-                        such as Shiva and Vishnu, and famous examples can be seen at 
-                        Halebidu, Belur and Somnathpur in Karnataka.
+                     Among the distinctive features of Hoysala temples are the 
+                    voluptuous female bracket figures that decorate the
+                     roof struts. These sculptures typically comprise of an ornate 
+                     tree canopy above a main figure flanked by attendants.
                 </p>
             </div>
         </div>
