--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="flex flex-col gap-2 flex-wrap items-center" id="arty">
         <h1 class="mt-4 xl:m-8 font-della text-orange-950 font-extrabold xl:text-6xl text-2xl">Artifacts</h1>
         <div class="flex flex-col xl:flex-row gap-1 flex-wrap items-center">
-            <div class="flex flex-col gap-3 xl:w-96 p-4 ring-2 ring-orange-300  bg-orange-100 m-4 items-center shadow-lg shadow-orange-600/20 rounded-xl">
+            <div class="flex flex-col gap-3 xl:h-[750px] xl:w-96 p-4 ring-2 ring-orange-300  bg-orange-100 m-4 items-center shadow-lg shadow-orange-600/20 rounded-xl">
                 <h1 class="font-della font-semibold">Artifact 1</h1>
                 <img class="h-80 rounded-2xl shadow-xl shadow-orange-600/25" src="arty1.jpg" alt="1">
                 <h1 class="font-della font-semibold">Stone bracket from Hoysala temple</h1>
@@ -49,7 +49,7 @@
                 </p>
             </div>
 
-            <div class="flex flex-col gap-3 xl:w-96 p-4 ring-2 ring-orange-300  bg-orange-100 m-4 items-center shadow-lg shadow-orange-600/20 rounded-xl">
+            <div class="flex flex-col gap-3 xl:w-96 xl:h-[750px] p-4 ring-2 ring-orange-300  bg-orange-100 m-4 items-center shadow-lg shadow-orange-600/20 rounded-xl">
                 <h1 class="font-della font-semibold">Artifact 2</h1>
                 <img class="h-80 rounded-2xl shadow-xl shadow-orange-600/25" src="arty2.jpg" alt="1">
                 <h1 class="font-della font-semibold">Stone bracket from Hoysala temple</h1>
@@ -62,7 +62,7 @@
                 </p>
             </div>
 
-            <div class="flex flex-col gap-3 xl:w-96 p-4 ring-2 ring-orange-300  bg-orange-100 m-4 items-center shadow-lg shadow-orange-600/20 rounded-xl">
+            <div class="flex flex-col gap-3 xl:w-96 xl:h-[750px] p-4 ring-2 ring-orange-300  bg-orange-100 m-4 items-center shadow-lg shadow-orange-600/20 rounded-xl">
                 <h1 class="font-della font-semibold">Artifact 3</h1>
                 <img class="h-80 rounded-2xl shadow-xl shadow-orange-600/25" src="arty3.jpg" alt="1">
                 <h1 class="font-della font-semibold">Stone bracket from Hoysala temple</h1>
